knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Credentials_Committee_Meeting_Sept_c__c.field-meta.xml
<CustomField>
    <fullName>Credentials_Committee_Meeting_Sept_c__c</fullName>
    <externalDeveloperName>Credentials_Committee_Meeting_Sept__c</externalDeveloperName>
    <label>Credentials Committee Meeting - Sept</label>
    <type>Date</type>
</CustomField>