knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Current_Vol_Trend_c__c.field-meta.xml
<CustomField>
    <fullName>Current_Vol_Trend_c__c</fullName>
    <externalDeveloperName>Current_Vol_Trend__c</externalDeveloperName>
    <label>Current Vol Trend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>