knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Current_Volume_c__c.field-meta.xml
<CustomField>
    <fullName>Current_Volume_c__c</fullName>
    <externalDeveloperName>Current_Volume__c</externalDeveloperName>
    <label>Volume</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>