knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Daily_Census_c__c.field-meta.xml
<CustomField>
    <fullName>Daily_Census_c__c</fullName>
    <externalDeveloperName>Daily_Census__c</externalDeveloperName>
    <label>Daily Census</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>