knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Data_Quality_Description_c__c.field-meta.xml
<CustomField>
    <fullName>Data_Quality_Description_c__c</fullName>
    <externalDeveloperName>Data_Quality_Description__c</externalDeveloperName>
    <label>Missing Data Quality Elements</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>