knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Date_of_Decline_c__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Decline_c__c</fullName>
    <externalDeveloperName>Date_of_Decline__c</externalDeveloperName>
    <label>Date of Decline</label>
    <type>Date</type>
</CustomField>