knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <externalDeveloperName>Description</externalDeveloperName>
    <label>Account / Hospital Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>