knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Designated_Hot_Spot_c__c.field-meta.xml
<CustomField>
    <fullName>Designated_Hot_Spot_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Designated_Hot_Spot__c</externalDeveloperName>
    <label>Designated Hot Spot</label>
    <type>Checkbox</type>
</CustomField>