knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Does_TSG_bill_for_QMP_patients_c__c.field-meta.xml
<CustomField>
    <fullName>Does_TSG_bill_for_QMP_patients_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Does_TSG_bill_for_QMP_patients__c</externalDeveloperName>
    <label>Does TSG bill for QMP patients?</label>
    <type>Checkbox</type>
</CustomField>