knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Downcode_c__c.field-meta.xml
<CustomField>
    <fullName>Downcode_c__c</fullName>
    <externalDeveloperName>Downcode__c</externalDeveloperName>
    <label>Downcode %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>