knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Downcode_Opportunity_c__c.field-meta.xml
<CustomField>
    <fullName>Downcode_Opportunity_c__c</fullName>
    <externalDeveloperName>Downcode_Opportunity__c</externalDeveloperName>
    <label>Downcode Opportunity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>