knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Driving_Directions_c__c.field-meta.xml
<CustomField>
    <fullName>Driving_Directions_c__c</fullName>
    <externalDeveloperName>Driving_Directions__c</externalDeveloperName>
    <label>Nearby Cities</label>
    <length>255</length>
    <type>Text</type>
</CustomField>