knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/ED_Description_c__c.field-meta.xml
<CustomField>
    <fullName>ED_Description_c__c</fullName>
    <externalDeveloperName>ED_Description__c</externalDeveloperName>
    <label>ED Description</label>
    <type>TextArea</type>
</CustomField>