knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/ED_Fax_c__c.field-meta.xml
<CustomField>
    <fullName>ED_Fax_c__c</fullName>
    <externalDeveloperName>ED_Fax__c</externalDeveloperName>
    <label>ED Fax</label>
    <type>Phone</type>
</CustomField>