knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/ED_Observation_Beds_c__c.field-meta.xml
<CustomField>
    <fullName>ED_Observation_Beds_c__c</fullName>
    <externalDeveloperName>ED_Observation_Beds__c</externalDeveloperName>
    <label>ED Observation Beds</label>
    <length>255</length>
    <type>Text</type>
</CustomField>