knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/ED_Payor_Mix_Total_c__c.field-meta.xml
<CustomField>
    <fullName>ED_Payor_Mix_Total_c__c</fullName>
    <externalDeveloperName>ED_Payor_Mix_Total__c</externalDeveloperName>
    <label>Payor Mix Total %:</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>