knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/ED_Phone_c__c.field-meta.xml
<CustomField>
    <fullName>ED_Phone_c__c</fullName>
    <externalDeveloperName>ED_Phone__c</externalDeveloperName>
    <label>ED Phone</label>
    <type>Phone</type>
</CustomField>