knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/ED_Proposal_Volume_c__c.field-meta.xml
<CustomField>
    <fullName>ED_Proposal_Volume_c__c</fullName>
    <externalDeveloperName>ED_Proposal_Volume__c</externalDeveloperName>
    <label>ED Proposal Volume</label>
    <precision>12</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>