knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/ED_Region_c__c.field-meta.xml
<CustomField>
    <fullName>ED_Region_c__c</fullName>
    <externalDeveloperName>ED_Region__c</externalDeveloperName>
    <label>ED Region</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>