knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Emergency_Contact_Phone_c__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Contact_Phone_c__c</fullName>
    <externalDeveloperName>Emergency_Contact_Phone__c</externalDeveloperName>
    <label>Emergency Contact Phone #</label>
    <type>Phone</type>
</CustomField>