knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/EPBS_Transition_Date_c__c.field-meta.xml
<CustomField>
    <fullName>EPBS_Transition_Date_c__c</fullName>
    <externalDeveloperName>EPBS_Transition_Date__c</externalDeveloperName>
    <label>EPBS Transition Date</label>
    <type>Date</type>
</CustomField>