knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/EPBSHospID_c__c.field-meta.xml
<CustomField>
    <fullName>EPBSHospID_c__c</fullName>
    <externalDeveloperName>EPBSHospID__c</externalDeveloperName>
    <label>EPBSHospID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>