knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/ER_Group_Description_c__c.field-meta.xml
<CustomField>
    <fullName>ER_Group_Description_c__c</fullName>
    <externalDeveloperName>ER_Group_Description__c</externalDeveloperName>
    <label>ER Group Description</label>
    <type>TextArea</type>
</CustomField>