knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/experianqas_Updated_Touchpoints_Timestam__c.field-meta.xml
<CustomField>
    <fullName>experianqas_Updated_Touchpoints_Timestam__c</fullName>
    <externalDeveloperName>experianqas__Updated_Touchpoints_Timestamp__c</externalDeveloperName>
    <label>Updated Touchpoints Timestamp</label>
    <type>DateTime</type>
</CustomField>