knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Extension_c__c.field-meta.xml
<CustomField>
    <fullName>Extension_c__c</fullName>
    <externalDeveloperName>Extension__c</externalDeveloperName>
    <label>Ext</label>
    <type>Phone</type>
</CustomField>