knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Facility_E_mail_c__c.field-meta.xml
<CustomField>
    <fullName>Facility_E_mail_c__c</fullName>
    <externalDeveloperName>Facility_E_mail__c</externalDeveloperName>
    <label>Facility E-mail</label>
    <length>50</length>
    <type>Text</type>
</CustomField>