knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Facility_NPI_ID_c__c.field-meta.xml
<CustomField>
    <fullName>Facility_NPI_ID_c__c</fullName>
    <externalDeveloperName>Facility_NPI_ID__c</externalDeveloperName>
    <label>Facility_NPI_ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>