knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Facility_Short_Name_c__c.field-meta.xml
<CustomField>
    <fullName>Facility_Short_Name_c__c</fullName>
    <externalDeveloperName>Facility_Short_Name__c</externalDeveloperName>
    <label>Facility Short Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>