knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Facility_Termination_Time_c__c.field-meta.xml
<CustomField>
    <fullName>Facility_Termination_Time_c__c</fullName>
    <externalDeveloperName>Facility_Termination_Time__c</externalDeveloperName>
    <label>Client Termination Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>