knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Fax_Contact_c__c.field-meta.xml
<CustomField>
    <fullName>Fax_Contact_c__c</fullName>
    <externalDeveloperName>Fax_Contact__c</externalDeveloperName>
    <label>Fax Contact</label>
    <length>35</length>
    <type>Text</type>
</CustomField>