knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Fax_Delivery_c__c.field-meta.xml
<CustomField>
    <fullName>Fax_Delivery_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Fax_Delivery__c</externalDeveloperName>
    <label>Fax Delivery</label>
    <type>Checkbox</type>
</CustomField>