knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Fax_Number_c__c.field-meta.xml
<CustomField>
    <fullName>Fax_Number_c__c</fullName>
    <externalDeveloperName>Fax_Number__c</externalDeveloperName>
    <label>Fax Number</label>
    <type>Phone</type>
</CustomField>