knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Former_ER_Group_c__c.field-meta.xml
<CustomField>
    <fullName>Former_ER_Group_c__c</fullName>
    <externalDeveloperName>Former_ER_Group__c</externalDeveloperName>
    <label>ER Former Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>