knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/From_Startup_Days_c__c.field-meta.xml
<CustomField>
    <fullName>From_Startup_Days_c__c</fullName>
    <externalDeveloperName>From_Startup_Days__c</externalDeveloperName>
    <label>From Startup Days</label>
    <precision>18</precision>
    <readOnlyProxy>true</readOnlyProxy>
    <scale>0</scale>
    <type>Number</type>
</CustomField>