knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/FTP_Contact_c__c.field-meta.xml
<CustomField>
    <fullName>FTP_Contact_c__c</fullName>
    <externalDeveloperName>FTP_Contact__c</externalDeveloperName>
    <label>FTP Contact</label>
    <length>35</length>
    <type>Text</type>
</CustomField>