knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/FTP_Delivery_c__c.field-meta.xml
<CustomField>
    <fullName>FTP_Delivery_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>FTP_Delivery__c</externalDeveloperName>
    <label>FTP Delivery</label>
    <type>Checkbox</type>
</CustomField>