knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/geoFlag_c__c.field-meta.xml
<CustomField>
    <fullName>geoFlag_c__c</fullName>
    <externalDeveloperName>geoFlag__c</externalDeveloperName>
    <label>Geocoding Status</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>