knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Google_Alert_Cancel_URL_c__c.field-meta.xml
<CustomField>
    <fullName>Google_Alert_Cancel_URL_c__c</fullName>
    <externalDeveloperName>Google_Alert_Cancel_URL__c</externalDeveloperName>
    <label>Google Alert Cancel URL</label>
    <type>Url</type>
</CustomField>