knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Google_Alerts_to_Chatter_Status_c__c.field-meta.xml
<CustomField>
    <fullName>Google_Alerts_to_Chatter_Status_c__c</fullName>
    <externalDeveloperName>Google_Alerts_to_Chatter_Status__c</externalDeveloperName>
    <label>Google Alerts to Chatter Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>