knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Governing_Board_Meeting_Oct_c__c.field-meta.xml
<CustomField>
    <fullName>Governing_Board_Meeting_Oct_c__c</fullName>
    <externalDeveloperName>Governing_Board_Meeting_Oct__c</externalDeveloperName>
    <label>Governing Board Meeting - Oct</label>
    <type>Date</type>
</CustomField>