knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Governing_Board_Meeting_Sept_c__c.field-meta.xml
<CustomField>
    <fullName>Governing_Board_Meeting_Sept_c__c</fullName>
    <externalDeveloperName>Governing_Board_Meeting_Sept__c</externalDeveloperName>
    <label>Governing Board Meeting - Sept</label>
    <type>Date</type>
</CustomField>