knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Group_Affiliated_c__c.field-meta.xml
<CustomField>
    <fullName>Group_Affiliated_c__c</fullName>
    <externalDeveloperName>Group_Affiliated__c</externalDeveloperName>
    <label>Group Affiliated</label>
    <length>70</length>
    <type>Text</type>
</CustomField>