knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Group_c__c.field-meta.xml
<CustomField>
    <fullName>Group_c__c</fullName>
    <externalDeveloperName>Group__c</externalDeveloperName>
    <label>Group</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>