knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Group_Name_c__c.field-meta.xml
<CustomField>
    <fullName>Group_Name_c__c</fullName>
    <externalDeveloperName>Group_Name__c</externalDeveloperName>
    <label>Group Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>