knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Group_Ownership_c__c.field-meta.xml
<CustomField>
    <fullName>Group_Ownership_c__c</fullName>
    <externalDeveloperName>Group_Ownership__c</externalDeveloperName>
    <label>Hospital System Affiliation</label>
    <length>50</length>
    <type>Text</type>
</CustomField>