knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Group_Type_c__c.field-meta.xml
<CustomField>
    <fullName>Group_Type_c__c</fullName>
    <externalDeveloperName>Group_Type__c</externalDeveloperName>
    <label>Group Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>