knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Has_QMP_Program_c__c.field-meta.xml
<CustomField>
    <fullName>Has_QMP_Program_c__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>Has_QMP_Program__c</externalDeveloperName>
    <label>Has QMP Program?</label>
    <type>Checkbox</type>
</CustomField>