knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Header_Company_c__c.field-meta.xml
<CustomField>
    <fullName>Header_Company_c__c</fullName>
    <externalDeveloperName>Header_Company__c</externalDeveloperName>
    <label>Header Company</label>
    <type>TextArea</type>
</CustomField>