knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/HM_Group_c__c.field-meta.xml
<CustomField>
    <fullName>HM_Group_c__c</fullName>
    <externalDeveloperName>HM_Group__c</externalDeveloperName>
    <label>HM Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>