knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/HMO_PPO_c__c.field-meta.xml
<CustomField>
    <fullName>HMO_PPO_c__c</fullName>
    <externalDeveloperName>HMO_PPO__c</externalDeveloperName>
    <label>HMO/PPO %:</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>