knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Hospital_Annual_Dues_c__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Annual_Dues_c__c</fullName>
    <externalDeveloperName>Hospital_Annual_Dues__c</externalDeveloperName>
    <label>Hospital Annual Dues</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>