knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Hospital_Application_Fee_c__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Application_Fee_c__c</fullName>
    <externalDeveloperName>Hospital_Application_Fee__c</externalDeveloperName>
    <label>Hospital Application Fee</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>