knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Hospital_Mission_Statement_c__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Mission_Statement_c__c</fullName>
    <externalDeveloperName>Hospital_Mission_Statement__c</externalDeveloperName>
    <label>Hospital Mission Statement</label>
    <type>TextArea</type>
</CustomField>