knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Hospital_Ownership_Type_2_c__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Ownership_Type_2_c__c</fullName>
    <externalDeveloperName>Hospital_Ownership_Type_2__c</externalDeveloperName>
    <label>Hospital Ownership Type 2</label>
    <length>4099</length>
    <type>LongTextArea</type>
</CustomField>