knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Hospital_Ownership_Type_c__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Ownership_Type_c__c</fullName>
    <externalDeveloperName>Hospital_Ownership_Type__c</externalDeveloperName>
    <label>Hospital Ownership Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>