knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Hospital_Tax_ID_c__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Tax_ID_c__c</fullName>
    <externalDeveloperName>Hospital_Tax_ID__c</externalDeveloperName>
    <label>Hospital Tax ID</label>
    <length>30</length>
    <type>Text</type>
</CustomField>