knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Hospital_Taxomony_c__c.field-meta.xml
<CustomField>
    <fullName>Hospital_Taxomony_c__c</fullName>
    <externalDeveloperName>Hospital_Taxomony__c</externalDeveloperName>
    <label>Hospital Taxonomy</label>
    <length>30</length>
    <type>Text</type>
</CustomField>