knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Host_Hospital_c__c.field-meta.xml
<CustomField>
    <fullName>Host_Hospital_c__c</fullName>
    <externalDeveloperName>Host_Hospital__c</externalDeveloperName>
    <label>Host Hospital</label>
    <length>18</length>
    <type>Text</type>
</CustomField>