knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/HPSA_c__c.field-meta.xml
<CustomField>
    <fullName>HPSA_c__c</fullName>
    <externalDeveloperName>HPSA__c</externalDeveloperName>
    <label>HPSA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>