knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/HPSA_Designation_Date_c__c.field-meta.xml
<CustomField>
    <fullName>HPSA_Designation_Date_c__c</fullName>
    <externalDeveloperName>HPSA_Designation_Date__c</externalDeveloperName>
    <label>HPSA Designation Date</label>
    <type>Date</type>
</CustomField>