knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/HPSA_ID_c__c.field-meta.xml
<CustomField>
    <fullName>HPSA_ID_c__c</fullName>
    <externalDeveloperName>HPSA_ID__c</externalDeveloperName>
    <label>HPSA ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>