knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/HPSA_Medicare_Bonus_Eligible_c__c.field-meta.xml
<CustomField>
    <fullName>HPSA_Medicare_Bonus_Eligible_c__c</fullName>
    <externalDeveloperName>HPSA_Medicare_Bonus_Eligible__c</externalDeveloperName>
    <label>HPSA Medicare Bonus Eligible</label>
    <length>255</length>
    <type>Text</type>
</CustomField>