knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/IDSHospID_c__c.field-meta.xml
<CustomField>
    <fullName>IDSHospID_c__c</fullName>
    <externalDeveloperName>IDSHospID__c</externalDeveloperName>
    <label>IDSHospID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>