knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/If_Leased_Employees_Ins_Provided_By_c__c.field-meta.xml
<CustomField>
    <fullName>If_Leased_Employees_Ins_Provided_By_c__c</fullName>
    <externalDeveloperName>If_Leased_Employees_Ins_Provided_By__c</externalDeveloperName>
    <label>If Leased Employees Ins Provided By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>