knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <externalDeveloperName>Industry</externalDeveloperName>
    <label>Industry</label>
    <length>40</length>
    <type>Text</type>
</CustomField>