knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/Account__x/fields/Integration_notes_c__c.field-meta.xml
<CustomField>
    <fullName>Integration_notes_c__c</fullName>
    <externalDeveloperName>Integration_notes__c</externalDeveloperName>
    <label>Integration_notes</label>
    <type>TextArea</type>
</CustomField>